--- a/index.html
+++ b/index.html
@@ -506,16 +506,24 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="form-one">
           <div class="modal-form-label">
-            <label class="name-label" for="user-name">Name</label>
+            <label
+              class="name-label"
+              for="user-name"
+              id="user-name"
+              name="user-name"
+              >Name</label
+            >
             <div class="label-cont">
               <input type="text" name="name" class="form-input" required />
-              <svg class="icon-label" width="18" height="18">
+              <svg class="icon-label" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-label">
-            <label class="name-label" for="user-phone">Phone</label>
+            <label class="name-label" for="user-phone" name="user-phone"
+              >Phone</label
+            >
             <div class="label-cont">
               <input type="tel" name="phone" class="form-input" required />
               <svg class="icon-label" width="18" height="24">
@@ -524,7 +532,9 @@
             </div>
           </div>
           <div class="modal-form-label">
-            <label class="name-label" for="user-email">Email</label>
+            <label class="name-label" for="user-email" name="user-email"
+              >Email</label
+            >
             <div class="label-cont">
               <input type="email" name="email" class="form-input" required />
               <svg class="icon-label" width="18" height="24">
@@ -533,12 +543,14 @@
             </div>
           </div>
           <div class="box-input">
-            <label class="name-label">Comment</label>
+            <label class="name-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
               name="comment"
               rows="5"
               placeholder="Text input"
+              id="user-comment"
+              name="user-comment"
             >
             </textarea>
           </div>
@@ -546,11 +558,11 @@
             <input
               type="checkbox"
               class="checkbox visually-hidden"
-              id="user-checkbox"
+              id="user-privacy"
               required
               value="true"
             />
-            <label class="label-checkbox" for="user-checkbox"
+            <label class="label-checkbox" for="user-privacy"
               ><span class="custom-checkbox">
                 <svg class="icon-checkbox" width="10" height="8">
                   <use href="./images/icons.svg#icon-cheked"></use>
