--- a/index.html
+++ b/index.html
@@ -506,37 +506,47 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="form-one">
           <div class="modal-form-label">
-            <label
-              class="name-label"
-              for="user-name"
-              id="user-name"
-              name="user-name"
+            <label class="name-label" for="name-user" id="user-name"
               >Name</label
             >
             <div class="label-cont">
-              <input type="text" name="name" class="form-input" required />
+              <input
+                type="text"
+                name="user-name"
+                class="form-input"
+                id="name-user"
+                required
+              />
               <svg class="icon-label" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-label">
-            <label class="name-label" for="user-phone" name="user-phone"
-              >Phone</label
-            >
+            <label class="name-label" for="user-phone-tel">Phone</label>
             <div class="label-cont">
-              <input type="tel" name="phone" class="form-input" required />
+              <input
+                type="tel"
+                name="user-phone"
+                class="form-input"
+                id="user-phone-tel"
+                required
+              />
               <svg class="icon-label" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="modal-form-label">
-            <label class="name-label" for="user-email" name="user-email"
-              >Email</label
-            >
+            <label class="name-label" for="user-email">Email</label>
             <div class="label-cont">
-              <input type="email" name="email" class="form-input" required />
+              <input
+                type="email"
+                name="user-email"
+                class="form-input"
+                id="email-user"
+                required
+              />
               <svg class="icon-label" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
@@ -546,7 +556,6 @@
             <label class="name-label" for="user-comment">Comment</label>
             <textarea
               class="form-textarea"
-              name="comment"
               rows="5"
               placeholder="Text input"
               id="user-comment"
@@ -554,12 +563,13 @@
             >
             </textarea>
           </div>
+
           <div class="modal-form-checkbox">
             <input
               type="checkbox"
               class="checkbox visually-hidden"
               id="user-privacy"
-              required
+              name="user-privacy"
               value="true"
             />
             <label class="label-checkbox" for="user-privacy"
