--- a/index.html
+++ b/index.html
@@ -506,15 +506,15 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="form-one">
           <div class="modal-form-label">
-            <label class="name-label" for="name-user" id="user-name"
+            <label class="name-label" for="user-name" id="user-name-name"
               >Name</label
             >
             <div class="label-cont">
               <input
                 type="text"
-                name="user-name"
+                name="name-user"
                 class="form-input"
-                id="name-user"
+                id="user-name"
                 required
               />
               <svg class="icon-label" width="18" height="24">
