--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             <div class="label-cont">
               <input
                 type="text"
-                name="name-user"
+                name="user-name"
                 class="form-input"
                 id="user-name"
                 required
